# simple-bazel-example

./: README.md  WORKSPACE  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html  styles.css
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/data-access/: amiibo-api.service.ts  amiibo.class.ts  data-access.module.ts
src/app/feature-amiibo-types/: BUILD.bazel  feature-amiibo-types.module.ts
src/app/feature-amiibo-types/amiibo-types-container/: amiibo-types-container.component.css  amiibo-types-container.component.html  amiibo-types-container.component.ts  amiibo-types-container.facade.ts
src/app/feature-amiibos/: BUILD.bazel  feature-amiibos.module.ts
src/app/feature-amiibos/amiibo-card/: amiibo-card.component.css  amiibo-card.component.html  amiibo-card.component.spec.ts  amiibo-card.component.ts
src/app/feature-amiibos/amiibos-container/: amiibos-container.component.css  amiibos-container.component.html  amiibos-container.component.spec.ts  amiibos-container.component.ts  amiibos-container.facade.ts  amiibos-container.service.spec.ts
src/app/shared/components/: BUILD.bazel  shared-components.module.ts
src/app/shared/components/amiibo-card/: amiibo-card.component.css  amiibo-card.component.html  amiibo-card.component.ts
src/app/shared/data-access/: BUILD.bazel  amiibo-api.service.spec.ts  amiibo-api.service.ts  amiibo.class.ts
